--- a/postgresql-node-connector/package.json
+++ b/postgresql-node-connector/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@counterfactual/postgresql-node-connector",
   "version": "0.0.3",
-  "main": "dist/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "src/index.ts",
   "description": "Implementation of a PostgreSQL storage service for the Counterfactual Node",
   "license": "MIT",
   "engines": {
@@ -10,9 +9,9 @@
     "node": "10.15.3"
   },
   "scripts": {
-    "prepublish": "tsc -b . && rollup -c",
-    "build": "tsc -b . && rollup -c",
-    "build:watch": "tsc -b . && rollup -c -w",
+    "prepublish": "tsc -b .",
+    "build": "tsc -b .",
+    "build:watch": "tsc -b .",
     "test": "jest --setupFiles dotenv-extended/config --runInBand --bail --forceExit",
     "lint:fix": "tslint -c tslint.json -p . --fix",
     "lint": "tslint -c tslint.json -p ."
@@ -29,10 +28,6 @@
     "@types/pg": "7.4.14",
     "dotenv-extended": "2.4.0",
     "jest": "24.8.0",
-    "rollup": "1.16.2",
-    "rollup-plugin-commonjs": "10.0.0",
-    "rollup-plugin-node-resolve": "5.0.4",
-    "rollup-plugin-typescript2": "0.21.2",
     "tslint": "5.18.0",
     "typescript": "3.5.1"
   }
