--- a/cf-wallet.js/package.json
+++ b/cf-wallet.js/package.json
@@ -38,7 +38,6 @@
     "ethers": "4.0.31",
     "eventemitter3": "^4.0.0",
     "global": "^4.3.2",
-    "rpc-server": "0.0.1",
-    "typedoc": "^0.14.2"
+    "rpc-server": "0.0.1"
   }
 }
