--- a/chain/package.json
+++ b/chain/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "build": "tsc -b . && rollup -c",
+    "build:contracts": "cd ../contracts && yarn build && cd - && tsc -b . && rollup -c",
     "build:watch": "tsc -b . && rollup -c -w",
     "test": "jest --setupFiles dotenv-extended/config --runInBand --bail --forceExit",
     "test:coverage": "jest --runInBand --detectOpenHandles --bail --coverage",
@@ -18,8 +19,8 @@
     "lint": "tslint -c tslint.json -p ."
   },
   "devDependencies": {
-    "@counterfactual/contracts": "0.1.3",
-    "@counterfactual/types": "0.0.18",
+    "@counterfactual/contracts": "0.1.4",
+    "@counterfactual/types": "0.0.19",
     "ethers": "4.0.32",
     "ganache-core": "2.5.5",
     "rollup": "1.16.3",
